# exif_rename

./: .flake8  .gitignore  README.md  coverage.bash  example.conf  exif_rename  exif_rename.py  nox-report.py  noxfile.py  pyproject.toml  scale_img_web.py  scale_jpeg_web  test.py
.github/workflows/: pythonapp.yml
test_data/config/: full.conf  partial.conf
test_data/script/: mv_log.py
