[project]
name = "exif_rename"
version = "0.9.0"
authors = [
  { name="Krista Karppinen" },
  { name="Fiona Klute", email="fiona.klute@gmx.de" },
]
description = "A tool for batch renaming image files based on their (creation) date"
license = { text="GPLv3+" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
]
dependencies = [
    "exifread",
]

[project.optional-dependencies]
tests = [
    'pytest',
    'coverage',
]

[project.urls]
"Homepage" = "https://github.com/crystal-cat/exif_rename"
"Bug Tracker" = "https://github.com/crystal-cat/exif_rename/issues"

[project.scripts]
"exif-rename" = "exif_rename:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
python_files = "test.py test_*.py *_test.py"
markers = [
    'modify_args(dict): Override default arguments for this test'
]

[tool.mypy]
exclude = [
    '^noxfile\.py$',
    '^test\.py$',
]

[[tool.mypy.overrides]]
module = [
    "argcomplete",
    "argcomplete.*",
    "exifread",
    "PIL",
]
ignore_missing_imports = true
